Correction feature photo and feature text misalignment

--- a/src/client/components/Browser/styles/slider.scss
+++ b/src/client/components/Browser/styles/slider.scss
@@ -11,49 +11,56 @@ div.slider-container{
 	background: rgb(189, 168, 105);
 	padding: 0;
 	margin: 0;
+
 	h3 {
 		text-indent: 50px;
 	   	text-align: left;
 	   	color: white;
 	   	margin-top:10px;	   
 	}
+
 	div.item-slider {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		justify-content: center;
+
+		div.img-slider {
+			display:flex;
+			flex-direction: row;
+			align-items: start;
 
 			img {
-			    width:100%;
-				position: relative;
-				padding: 2px;
-				top: -10px;
+				margin: auto;
 				max-width: 134px;
-    			left: 54px;
-    			@media screen and (min-width: 1100px) {
-					    max-width:230px;
-					    left:100px;
-					  }
+				@media screen and (min-width: 1100px) {
+						max-width:230px;
+				}
 			}
-			div.content-slider {
-					position: relative;
-					left: 0px;
-					right: 0px;
-					background: rgba(0, 0, 0, 0.4);
-					display: flex;
-					align-items: center;
+		}
+		
+		div.content-slider {
+			position: relative;
+			left: 0px;
+			right: 0px;
+			background: rgba(0, 0, 0, 0.4);
+			display: flex;
+			align-items: center;
 
-					div.content-text {
-						flex-grow: 1;
-						margin-left: 16px;
-						margin-right: 0px;
-						color: rgb(255, 255, 255);
-						overflow: hidden;
-						text-align: center;
-							span.comment {
-								font-size: 16px;
-								text-overflow: ellipsis;
-								overflow: hidden;
-								white-space: nowrap;
-							}
-					}
+			div.content-text {
+				flex-grow: 1;
+				color: rgb(255, 255, 255);
+				overflow: hidden;
+				text-align: center;
+			
+				span.comment {
+					font-size: 16px;
+					text-overflow: ellipsis;
+					overflow: hidden;
+					white-space: nowrap;
+				}
 			}
+		}
 	}
 }
 
